fixing extended buttons where they would overlap based on padding bleed

--- a/template_files/stylus/base.styl
+++ b/template_files/stylus/base.styl
@@ -1160,7 +1160,7 @@ demo()
 				margin-right: 5px
 	.extend
 		display: block
-		width: 100%
+		width: calc(100% - 50px)
 		text-align: center
 	.demo
 		position: relative
